crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-6.0__tests__template_tests__templatetags__tag_27584.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-6.0/tests/template_tests/templatetags/tag_27584.py
---
tag_rules: {}
filter_arities: {}
block_specs:
  "tests.template_tests.templatetags.tag_27584::tag::badtag":
    end_tag: endbadtag
    intermediates: []
    opaque: false
